testdata/baselines/reference/submodule/compiler/regularExpressionWithNonBMPFlags.errors.txt
regularExpressionWithNonBMPFlags.ts(7,18): error TS1499: Unknown regular expression flag.
regularExpressionWithNonBMPFlags.ts(7,19): error TS1005: ':' expected.
regularExpressionWithNonBMPFlags.ts(7,30): error TS1499: Unknown regular expression flag.
regularExpressionWithNonBMPFlags.ts(7,31): error TS1499: Unknown regular expression flag.
regularExpressionWithNonBMPFlags.ts(7,32): error TS1499: Unknown regular expression flag.


==== regularExpressionWithNonBMPFlags.ts (5 errors) ====
    // The characters in the following regular expression are ASCII-lookalike characters found in Unicode, including:
    // - 𝘴 (U+1D634 Mathematical Sans-Serif Italic Small S)
    // - 𝘪 (U+1D62A Mathematical Sans-Serif Italic Small I)
    // - 𝘮 (U+1D62E Mathematical Sans-Serif Italic Small M)
    //
    // See https://en.wikipedia.org/wiki/Mathematical_Alphanumeric_Symbols
    const 𝘳𝘦𝘨𝘦𝘹 = /(?𝘴𝘪-𝘮:^𝘧𝘰𝘰.)/𝘨𝘮𝘶;
                     ~
!!! error TS1499: Unknown regular expression flag.
                      
!!! error TS1005: ':' expected.
                                 ~
!!! error TS1499: Unknown regular expression flag.
                                  ~
!!! error TS1499: Unknown regular expression flag.
                                   ~
!!! error TS1499: Unknown regular expression flag.
    